GEM-110: Fixes a bug with webkit where radio buttons are being clipped

--- a/base/_forms.scss
+++ b/base/_forms.scss
@@ -156,6 +156,14 @@ input[type="checkbox"] {
   line-height: normal;
 }
 
+// This fixes a bug in webkit where radio buttons get clipped 1px when the
+// container is overflow: hidden;
+// I've opened a ticket with Chromium
+// https://code.google.com/p/chromium/issues/detail?q=radio%20button%20overflow%20hidden&colspec=ID%20Pri%20M%20Iteration%20ReleaseBlock%20Cr%20Status%20Owner%20Summary%20OS%20Modified&id=396726&thanks=396726&ts=1406140510
+input[type="radio"] {
+  margin-left: 1px;
+}
+
 // Reset width of input images, buttons, radios, checkboxes
 input[type="file"],
 input[type="image"],
